update project id
change old ccp project id to cwp project id

--- a/ccp.report.html
+++ b/ccp.report.html
@@ -53,7 +53,8 @@
     var timeStart;
     var timeEnd;
     var idResultDiv = "resultDiv";
-    var project_ObjectID = "26142219045";
+    //var project_ObjectID = "26142219045";
+    var project_ObjectID = "39215785906";
 
     function mainEntrance() {
         var showTable = function(piName){
